# VaKon2D

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Doxyfile.bak  LICENSE  PGP-key.asc  README.md  SECURITY.md  documentation.html
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: c-cpp.yml  main.yml
benchmark/: CMakeLists.txt  TestUtils.cpp
dependencies/GLAD/: glad.c  glad.h
dependencies/GLM/glm/detail/: compute_common.hpp
dependencies/GLM/glm/ext/: matrix_clip_space.inl
dependencies/GLM/glm/gtx/: matrix_decompose.inl
dependencies/freetype-2.10.0/: CMakeLists.txt
dependencies/glfw-3.3.7/: CMakeLists.txt
dependencies/glfw-3.3.7/docs/: CMakeLists.txt
dependencies/glfw-3.3.7/examples/: heightmap.c
dependencies/googlebenchmark/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/googletest/src/: gtest-filepath.cc  gtest-printers.cc  gtest.cc
dependencies/misc/: json.hpp
docs/: CNAME  index.html
docs/assets/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-paragraph-link.js
docs/assets/doxygen-custom/: header.html
docs/html/: _color_8h.html  _color_8h.js  _color_8h__dep__incl.dot  _color_8h_source.html  _copyable_and_moveable_8h.html  _copyable_and_moveable_8h.js  _copyable_and_moveable_8h__dep__incl.dot  _copyable_and_moveable_8h_source.html  _copyable_but_not_moveable_8h.html  _copyable_but_not_moveable_8h.js  _copyable_but_not_moveable_8h_source.html  _custom_shader_program_8cpp.html  _custom_shader_program_8cpp__incl.dot  _custom_shader_program_8h.html  _custom_shader_program_8h.js  _custom_shader_program_8h__dep__incl.dot  _custom_shader_program_8h__incl.dot  _custom_shader_program_8h_source.html  _delegate_8h.html  _delegate_8h.js  _delegate_8h__dep__incl.dot  _delegate_8h__incl.dot  _delegate_8h_source.html  _draw_able_8cpp.html  _draw_able_8cpp__incl.dot  _draw_able_8h.html  _draw_able_8h.js  _draw_able_8h__dep__incl.dot  _draw_able_8h__incl.dot  _draw_able_8h_source.html  _font_8cpp.html  _font_8cpp__incl.dot  _font_8h.html  _font_8h.js  _font_8h__dep__incl.dot  _font_8h__incl.dot  _font_8h_source.html  _free_type_library_8cpp.html  _free_type_library_8cpp.js  _free_type_library_8cpp__incl.dot  (+828 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+98 more)
docs/latex/: _copyable_and_moveable_8h_source.tex  _custom_shader_program_8h_source.tex  _delegate_8h_source.tex  _draw_able_8h_source.tex  _font_8h_source.tex  _free_type_library_8h_source.tex  _gl_8h_source.tex  _glad_wrapper_8h_source.tex  _glfw_wrapper_8h_source.tex  _image_8h_source.tex  _input_action_8h_source.tex  _json_printable_8h_source.tex  _keyboard_8h_source.tex  _line_text_8h_source.tex  _logger_8h_source.tex  _mouse_8h_source.tex  _not_copyable_and_not_movable_8h_source.tex  _not_copyable_but_movable_8h_source.tex  _rect_8h_source.tex  _rectangle_8h_source.tex  _shader_8h_source.tex  _shader_program_8h_source.tex  _singleton_8h_source.tex  _size_8h_source.tex  _texture_8h_source.tex  _timer_8h_source.tex  _updateable_8h_source.tex  _updateable_collector_8h_source.tex  _utils_functions_8h_source.tex  _va_kon2_d_8h_source.tex  _vao_8h_source.tex  _vbo_8h_source.tex  _widget_8h_source.tex  _widget_collector_8h_source.tex  _widget_reflector_8h_source.tex  _window_8h_source.tex  _world_8h_source.tex  _world_variables_8h_source.tex  annotated.tex  class_custom_shader_program.eps  (+137 more)
game/: CMakeLists.txt
game/assets/shaders/: main-fragment.glsl  main-vertex.glsl  text.frag  text.vert  widget.frag  widget.vert
game/include/: VaKon2D.h
game/source/: VaKon2D.cpp  main.cpp
lib/base-game/: CMakeLists.txt
lib/base-game/include/: App.h  BaseGameMode.h  BaseGameState.h  BasePlayerState.h  BaseWorld.h
lib/base-game/source/: App.cpp  BaseGameMode.cpp  BaseGameState.cpp  BasePlayerState.cpp  BaseWorld.cpp
lib/boost/: CMakeLists.txt
lib/core/animations/: CMakeLists.txt
lib/core/animations/include/: IAnimation.h  StopMotionAnimation.h
lib/core/animations/source/: StopMotionAnimation.cpp
lib/core/camera/: CMakeLists.txt
lib/core/camera/include/: Camera.h
lib/core/camera/source/: Camera.cpp
lib/core/core-wrappers/: CMakeLists.txt
lib/core/core-wrappers/include/: Color.h  CustomShaderProgram.h  Gl.h  GladWrapper.h  GlfwWrapper.h  Image.h  Initer.h  JsonPrintable.h  Shader.h  ShaderPack.h  ShaderProgram.h  Texture.h  Updateable.h  UpdateableCollector.h  Vao.h  Vbo.h
lib/core/core-wrappers/source/: CustomShaderProgram.cpp  Gl.cpp  GladWrapper.cpp  GlfwWrapper.cpp  Image.cpp  Shader.cpp  ShaderPack.cpp  ShaderProgram.cpp  Texture.cpp  Updateable.cpp  UpdateableCollector.cpp  Vao.cpp  Vbo.cpp
lib/core/delegate/: CMakeLists.txt
lib/core/delegate/include/: Delegate.h
lib/core/freetype-wrapper/: CMakeLists.txt
lib/core/input-devices/: CMakeLists.txt
lib/core/logger/: CMakeLists.txt
lib/core/logger/include/: Logger.h
lib/core/logger/source/: Logger.cpp
lib/core/programs/: CMakeLists.txt
lib/core/shapes/: CMakeLists.txt
lib/core/utils/: CMakeLists.txt
lib/core/utils/include/: CopyableAndMoveable.h  CopyableButNotMoveable.h  NotCopyableAndNotMovable.h  NotCopyableButMovable.h  Rect.h  Singleton.h  Size.h  UtilsFunctions.h
lib/core/utils/source/: Rect.cpp  UtilsFunctions.cpp
lib/core/window/: CMakeLists.txt
lib/core/world/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glew/: CMakeLists.txt
lib/glm/: CMakeLists.txt
lib/misc/: CMakeLists.txt
lib/spdlog/: CMakeLists.txt
needed-shaders/: instanced-widget.frag  instanced-widget.vert  widget.vert
tests/: CMakeLists.txt  TestUtils.cpp  main.cpp
(+47 files in other folders)
